syntax = "proto3";
package qaul.rpc.feed;


// Feed service RPC message container
message Feed {
    // message type
    oneof message {
        // received messages
        FeedMessageList received = 1;
        // send a new feed message
        SendMessage send = 2;
        // request received messages
        FeedMessageRequest request = 3;
    }
}

// request feed messages
message FeedMessageRequest {
    // DEPRECATED
    bytes last_received = 1;
    // Index of the last message received
    //
    // The message index is a continues numbering
    // of incoming messages in the database of the node.
    //
    // When this variable is set, only
    // newer messages will be sent.
    // Default value is 0, when the value
    // is 0, all feed messages will be sent.
    uint64 last_index = 2;
    // Number of items to skip from the beginning of the filtered set.
    // Default is 0 (no offset).
    uint32 offset = 10;
    // Maximum number of items to return.
    // Default is 0, which means return all items.
    uint32 limit = 20;
}

// Pagination metadata returned with list responses.
message PaginationMetadata {
    bool has_more = 10;
    uint32 total = 20;
    uint32 offset = 30;
    uint32 limit = 40;
}

// List of feed messages
message FeedMessageList {
    repeated FeedMessage feed_message = 1;
    PaginationMetadata pagination = 10;
}

// A single feed message
message FeedMessage {
    bytes sender_id = 1;
    // DEPRECATED
    string sender_id_base58 = 2;
    bytes message_id = 3;
    // DEPRECATED
    string message_id_base58 = 4;
    // DEPRECATED
    string time_sent = 5;
    uint64 timestamp_sent = 9;
    // DEPRECATED
    string time_received = 6;
    uint64 timestamp_received = 10;
    string content = 7;
    uint64 index = 8;
}

// send feed message
message SendMessage {
    string content = 1;
}
